--- a/views/employee/index.dust
+++ b/views/employee/index.dust
@@ -7,38 +7,23 @@
 		<link href="/css/custom.css" rel="stylesheet" type="text/css" media="screen"/>
 	</head>
 	<body>
-		
-		<div class="jumbotron text-center">
+		<div id = "alert_placeholder"></div>
+		<div class="jumbotron text-center fullHeight">
 	  		<h2>{name}, let's punch!</h2>
-	  		<!--
-	  			<form action="/employee/{name}/punch" method="post">
-				<input class="login" type="submit" name="type" value="in" src=""/>
-				<input class="logout" type="submit" name="type" value="out" src=""/>
-				<input type="hidden" name="name" value="{name}"/>
-			</form> 		
-			-->
-			<div class="margin20topdown">
-				<a href="/employee/{name}/punch/in"><img src="/assets/images/transparent.png" class="login"></a>
-				<a href="/employee/{name}/punch/out"><img src="/assets/images/transparent.png" class="logout"></a>
+			<div>
+				<left>
+					<a class="punchLink" id="punchIn" href="/employee/{name}/punch/in" type="in" reportLink="/employee/{name}/report"><img class="iconButton" src="/assets/images/actions/login.png"></a>
+				</left>
+				<right>
+					<a class="punchLink" id="punchOut" href="/employee/{name}/punch/out" type="out" reportLink="/employee/{name}/report"><img class="iconButton" src="/assets/images/actions/logout.png"></a>
+				</right>
 			</div>
-			{?date}
-				{@if cond="'{type}' == 'IN'"}
-		   			<div class="alert alert-success text-center">
-		   				<button type="button" class="close" data-dismiss="alert">&times;</button>
-		   				<p>{@formatDate value="{date}"/}</p>
-		   				<a href="/employee/{name}/report">Report</a>
-		   			</div>
-		 		{:else}
-		   			<div class="alert alert-danger text-center">
-		   				<button type="button" class="close" data-dismiss="alert">&times;</button>
-		   				<p>{@formatDate value="{date}"/}</p>
-		   				<a href="/employee/{name}/report">Report</a>
-		   			</div>
-		 		{/if}		
-			{/date}
+			
 		</div>	
+		
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 		<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-
+		<script type="text/javascript" src="https://rawgithub.com/timrwood/moment/2.1.0/min/moment.min.js"></script>
+		<script type="text/javascript" src="/js/custom.js"></script>
 	</body>
 </html>
