--- a/views/employee/index.dust
+++ b/views/employee/index.dust
@@ -3,6 +3,8 @@
 	<head>
 		<title>Punch</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 		<link href="/css/custom.css" rel="stylesheet" type="text/css" media="screen"/>
 	</head>
