--- a/views/employee/report.dust
+++ b/views/employee/report.dust
@@ -3,13 +3,18 @@
 <head>
 	<title>Daily Punch</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="/css/bootstrap-glyphicons.css" rel="stylesheet" type="text/css" />
 	<link href="/css/custom.css" rel="stylesheet" type="text/css" media="screen"/>
 </head>
 <body>	
 	<div class="jumbotron text-center">
-		<a href="/employee/{name}">Back to punching</a>
+		<ul class="breadcrumb">
+			<li><a href="/employee/{name}">Home</a></li>			
+			<li class="active">Reporting</li>
+		</ul>
 		{?records}
 		<table class="table">
   			<thead>  				
