--- a/views/employee/report.dust
+++ b/views/employee/report.dust
@@ -26,7 +26,7 @@
   			<tbody>
 	  			<tr>	  				
 	  				<td><span class="label label-success">{@formatCalendar value="{punchIn}"/}</span></td>
-	  				<td><span class="label label-danger">{@formatDate value="{punchOut}" format="HH:mm:SS"/}</span></td>
+	  				<td><span class="label label-danger">{@formatDate value="{punchOut}" format="HH:mm:ss"/}</span></td>
 	  				<td><span class="label label-info">{totalHours}</span></td>
 	  			</tr>
 	  		</tbody>
