--- a/views/employee/index.dust
+++ b/views/employee/index.dust
@@ -1,35 +1,20 @@
-<!DOCTYPE HTML>
-<html manifest="punch.appcache">
-	<head>
-		<title>Punch</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="/css/custom.css" rel="stylesheet" type="text/css" media="screen"/>
-	</head>
-	<body>
-		<div id = "alert_placeholder"></div>
-		<div class="jumbotron text-center fullHeight">
-	  		<h3 id="punchName" text="{name}, punch it!">{name}, punch it!</h3>
-			<div>
-				<left>
-					<a class="punchLink" id="punchIn" href="#" link="/employee/{name}/punch" type="in" reportLink="/employee/{name}/report"><img class="iconButton" src="/assets/images/actions/login.svg"></a>
-				</left>
-				<right>
-					<a class="punchLink" id="punchOut" href="#" link="/employee/{name}/punch" type="out" reportLink="/employee/{name}/report"><img class="iconButton" src="/assets/images/actions/logout.svg"></a>
-				</right>
-				<one>
-					<div class="give_me_top_space">
-						<a  href="/employee/{name}/report">Summary Report<a/>
-					</div>
-				</one>
-			</div>
-		</div>	
-		
-		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-		<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="https://rawgithub.com/timrwood/moment/2.1.0/min/moment.min.js"></script>
-		<script type="text/javascript" src="/js/custom.js"></script>
-	</body>
-</html>
+{>"layout/main"/}
+{<main}
+	<div id = "alert_placeholder"></div>
+	<div class="jumbotron text-center fullHeight">
+  		<h3 id="punchName" text="{name}, punch it!">{name}, punch it!</h3>
+		<div>
+			<left>
+				<a class="punchLink" id="punchIn" href="#" link="/employee/{name}/punch" type="in" reportLink="/employee/{name}/report"><img class="iconButton" src="/assets/images/actions/login.svg"></a>
+			</left>
+			<right>
+				<a class="punchLink" id="punchOut" href="#" link="/employee/{name}/punch" type="out" reportLink="/employee/{name}/report"><img class="iconButton" src="/assets/images/actions/logout.svg"></a>
+			</right>
+			<one>
+				<div class="give_me_top_space">
+					<a  href="/employee/{name}/report">Summary Report<a/>
+				</div>
+			</one>
+		</div>
+	</div>	
+{/main}
