--- a/views/employee/punchday/index.dust
+++ b/views/employee/punchday/index.dust
@@ -9,6 +9,17 @@
 	<link href="/css/custom.css" rel="stylesheet" type="text/css" media="screen"/>
 </head>
 <body>	
+	
+	<script type="text/javascript" src="/js/jquery-2.0.3.min.js"></script>
+	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/js/moment.min.js"></script>
+	<script type="text/javascript" src="/js/custom.js"></script>
+
+</body>
+</html>
+
+{>"layout/main"/}
+{<main}
 	<div class="jumbotron text-center">
 		<ul class="breadcrumb">
 			<li><a href="/admin">Admin</a></li>			
@@ -32,11 +43,5 @@
 				</tbody>
 			</table>  	
 		</form>	
-	
-		
 	</div>	
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-
-</body>
-</html>
+{/main}
