--- a/views/employee/report.dust
+++ b/views/employee/report.dust
@@ -34,8 +34,10 @@
 		</table>  		
 		{/records}
 	</div>	
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+	<script type="text/javascript" src="/js/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/js/moment.min.js"></script>
+	<script type="text/javascript" src="/js/custom.js"></script>
 
 </body>
 </html>
