--- a/views/employee/reportDetails.dust
+++ b/views/employee/reportDetails.dust
@@ -1,13 +1,5 @@
-
-<html>
-<head>
-	<title>Punch</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<link href="/css/custom.css" rel="stylesheet" type="text/css" media="screen"/>
-</head>
-<body>
-	
+{>"layout/main"/}
+{<main}
 	<div class="jumbotron text-center">
 		{?records}
   		<div class="list-group">
@@ -16,9 +8,5 @@
 		  {/records}
 		</div>
 		{/records}
-	</div>	
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-
-</body>
-</html>
+	</div>
+{/main}
