--- a/views/index.dust
+++ b/views/index.dust
@@ -1,32 +1,17 @@
-<!DOCTYPE HTML>
-<html manifest="punch.appcache">
-	<head>
-		<title>Punch</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="/css/custom.css" rel="stylesheet" type="text/css" media="screen"/>
-	</head>
-	<body>
-		<div id = "alert_placeholder"></div>
-		<div class="jumbotron text-center fullHeight">
-	  		<h2>Give yourself a nickname!</h2>
-			<div>
-				<one>
-					<form role="form" method="POST" action="/employee">
-						<div class="form-group">						
-							<input type="text" class="form-control" name="name" placeholder="nickname" value="">
-						</div>						
-						<button type="submit" class="btn btn-success">Start Punching</button>
-					</form>
-				</one>
-			</div>
-		</div>	
-		
-		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-		<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="https://rawgithub.com/timrwood/moment/2.1.0/min/moment.min.js"></script>
-		<script type="text/javascript" src="/js/custom.js"></script>
-	</body>
-</html>
+{>"layout/main"/}
+{<main}
+	<div id = "alert_placeholder"></div>
+	<div class="jumbotron text-center fullHeight">
+  		<h2>Give yourself a nickname!</h2>
+		<div>
+			<one>
+				<form role="form" method="POST" action="/employee">
+					<div class="form-group">						
+						<input type="text" class="form-control" name="name" placeholder="nickname" value="">
+					</div>						
+					<button type="submit" class="btn btn-success">Start Punching</button>
+				</form>
+			</one>
+		</div>
+	</div>	
+{/main}
