--- a/views/punchday/index.dust
+++ b/views/punchday/index.dust
@@ -1,14 +1,5 @@
-<html>
-<head>
-	<title>Daily Punch</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<link href="/css/bootstrap-glyphicons.css" rel="stylesheet" type="text/css" />
-	<link href="/css/custom.css" rel="stylesheet" type="text/css" media="screen"/>
-</head>
-<body>	
+{>"layout/main"/}
+{<main}
 	<div class="jumbotron text-center">
 		<ul class="breadcrumb">
 			<li><a href="/">Home</a></li>			
@@ -33,11 +24,5 @@
 				</tbody>
 			</table>  	
 		</form>	
-	
-		
 	</div>	
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-
-</body>
-</html>
+{/main}
